Fixes to make it compile with older JDKs.
git-svn-id: https://svn.apache.org/repos/asf/db/ddlutils/trunk@191427 13f79535-47bb-0310-9956-ffa450edef68